2021-02-08  Karl Berry  <karl@freefriends.org>

	* configure.ac (AC_INIT): TeX Live not TeXLive.

	* dvips.c (found_problems): define.
	(main): final exit status depends on its value.
	* protos.h (found_problems): declare.
	* output.c (copyfile_general): set found_problems=1 if image not found.
	This is to match the new behavior of dvipdfmx.
	https://tug.org/pipermail/dvipdfmx/2021-January/000159.html (thread)
	
	* test-missing-image.test: corresponding test.
	* testdata/missing-image.dvi,
	* testdata/missing-image.tex: files for new test.

2020-12-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* NEWS: Mention new/jfm feature.
	* dospecial.c:
	Output error of html special not to STDOUT but to STDERR.
	* dvips.h, {bitmapenc,color,dopage,dospecial,download,dvips,
	emspecial,finclude,fontdef,header,loadfont,output,pprescan,prescan,
	resident,scanpage,search,t1part,virtualfont,writet1}.c:
	Allow Unicode error messages on Windows console. (Windows only)

2020-11-28  Akira Kakuto  <kakuto@w32tex.org>

	* protos.h (titlename): new global.
	* dvips.c (titlename): new global.
	(helparr): new option -title.
	(main): recognize it.
	* output.c (initprinter) <%%Title>: use xbasename(iname) instead of
	iname by default.

2020-11-28  Karl Berry  <karl@freefriends.org>

	* dvips.texi (Option details): document -title.

2020-11-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* virtualfont.c:
	Accept Japanese virtual fonts without character definitions.
	https://github.com/texjporg/tex-jp-build/issues/99

2020-05-20  Karl Berry  <karl@freefriends.org>

	* dvips.texi (Virtual fonts): add brief mention of this new vf/jfm
	feature, from Takuji. Update all ctan links while here.

2020-05-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uptex-vf.test, testdata/upjf.{tex,dvi,tfm},
	testdata/upjf_{full,omit}.vf, testdata/upjf_{full,omit}.cnf:
	Update the test.

2020-04-26  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* Makefile.{am,in}, uptex-vf.test,
	testdata/Makefile_upjf, testdata/upjf{,-r,-g}.tfm,